--- a/Medical/AndroidManifest.xml
+++ b/Medical/AndroidManifest.xml
@@ -6,12 +6,13 @@
 
     <uses-sdk
         android:minSdkVersion="8"
-        android:targetSdkVersion="17" />
+        android:targetSdkVersion="19" />
 
     <application
+        android:name=".AppContext"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" 
+        android:theme="@style/AppTheme"
         android:allowBackup="true">
         <activity
             android:name=".StartActivity"
@@ -24,8 +25,8 @@
         
         <activity
             android:name=".MainActivity"
-        		android:screenOrientation="portrait"
-            android:theme="@android:style/Theme.NoTitleBar"/>
+        	android:screenOrientation="portrait"
+        	android:theme="@android:style/Theme.NoTitleBar"/>
         
     </application>
 
