--- a/Medical/AndroidManifest.xml
+++ b/Medical/AndroidManifest.xml
@@ -7,12 +7,19 @@
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="19" />
-
+    
+	 <!-- 允许应用程序使用网络进行数据交换 -->
+  	<uses-permission android:name="android.permission.INTERNET" />
+  	<!-- 允许程序访问Wi-Fi网络状态信息 -->
+  	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+  	<!-- 允许应用程序访问设备网络状态信息 -->
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    
     <application
         android:name=".AppContext"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme"
+        android:theme="@android:style/Theme.NoTitleBar"
         android:allowBackup="true">
         <activity
             android:name=".StartActivity"
@@ -25,8 +32,26 @@
         
         <activity
             android:name=".MainActivity"
-        	android:screenOrientation="portrait"
-        	android:theme="@android:style/Theme.NoTitleBar"/>
+        	android:screenOrientation="portrait"/>
+        
+         <activity
+            android:name=".personal.LoginActivity"
+        	android:screenOrientation="portrait"/>
+        <activity
+            android:name=".personal.RegisterActivity"
+        	android:screenOrientation="portrait"/>
+        <activity
+            android:name=".personal.ResetPassWordActivity"
+        	android:screenOrientation="portrait"/>
+        <activity
+            android:name=".personal.PersonalCenterActivity"
+        	android:screenOrientation="portrait"/>
+        <activity
+            android:name=".personal.EditPersonalActivity"
+        	android:screenOrientation="portrait"/>
+        <activity
+            android:name=".personal.ChangePassWordActivity"
+        	android:screenOrientation="portrait"/>
         
     </application>
 
