--- a/Medical/AndroidManifest.xml
+++ b/Medical/AndroidManifest.xml
@@ -14,6 +14,8 @@
   	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
   	<!-- 允许应用程序访问设备网络状态信息 -->
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <!-- 允许应用程序对扩展存储设备（如SD卡）进行写入操作 -->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     
     <application
         android:name=".AppContext"
