--- a/Medical/build.xml
+++ b/Medical/build.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project name="ancunyulu_aliyun" default="custom_release">
+<project name="medical" default="custom_release">
     
     <property file="ant.properties" />
     
