--- a/Medical/AndroidManifest.xml
+++ b/Medical/AndroidManifest.xml
@@ -2,11 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.start.medical"
     android:versionCode="2013080117"
-    android:versionName="1.0" >
+    android:versionName="v1.0.0" >
 
     <uses-sdk
         android:minSdkVersion="8"
-        android:targetSdkVersion="17" />
+        android:targetSdkVersion="19" />
     
 	 <!-- 允许应用程序使用网络进行数据交换 -->
   	<uses-permission android:name="android.permission.INTERNET" />
@@ -26,7 +26,7 @@
         
         <!-- 友盟统计 -->
         <meta-data android:name="UMENG_APPKEY" android:value="52707c2a56240b904805ff9e"/>
-		<meta-data android:name="UMENG_CHANNEL" android:value="Aliyun"/>
+		<meta-data android:name="UMENG_CHANNEL" android:value="WebSite"/>
         
         <activity
             android:name=".StartActivity"
