--- a/Medical/ant.properties
+++ b/Medical/ant.properties
@@ -1,6 +1,6 @@
 source.dir=src
 
-key.store=acyulukey
+key.store=keystore
 key.store.password=www.ancun.com
 key.alias=\u5b89\u5b58\u8bed\u5f55
 key.alias.password=www.ancun.com
@@ -9,10 +9,10 @@ sdk.dir=/Applications/Developer/androidsdk
 sdk.buildtools=18.1.1
 
 #\u751f\u6210\u76ee\u5f55
-app.build.path=/Users/start/Documents/Ancun/App
+app.build.path=/Users/start/Desktop/App
 #\u7248\u672c\u7f16\u53f7
 version.code=2013080117
 #\u6e20\u9053\u7f16\u53f7
-apk.market=Aliyun
+apk.market=WebSite
 #\u6e20\u9053\u7f16\u53f7
-app.channel=Aliyun
+app.channel=WebSite
