--- a/Medical/ant.properties
+++ b/Medical/ant.properties
@@ -4,11 +4,17 @@ key.alias=\u5b89\u5b58\u8bed\u5f55
 key.alias.password=www.ancun.com
 
 source.dir=src
-sdk.dir=/Applications/Developer/androidsdk
 sdk.buildtools=18.1.1
 
-#\u751f\u6210\u76ee\u5f55
-app.build.path=/Users/start/Desktop/App
+#Windows\u4e0bSDK\u76ee\u5f55
+sdk.dir=D:\\Program\\android-sdk
+#APP\u751f\u6210\u6240\u5728\u76ee\u5f55
+app.build.path=C:\\Users\\zhenyao\\Desktop\\App
+#Mac\u4e0bSDK\u76ee\u5f55
+#sdk.dir=/Applications/Developer/androidsdk
+#APP\u751f\u6210\u6240\u5728\u76ee\u5f55
+#app.build.path=/Users/start/Desktop/App
+
 #\u66ff\u6362\u7684\u7248\u672c\u7f16\u53f7
 version.code=2013080117
 #\u6e20\u9053\u7f16\u53f7
