--- a/Medical/AndroidManifest.xml
+++ b/Medical/AndroidManifest.xml
@@ -16,6 +16,8 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <!-- 允许应用程序对扩展存储设备（如SD卡）进行写入操作 -->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <!-- 获取用户设备的IMEI，通过IMEI和mac来唯一的标识用户 -->
+	<uses-permission android:name="android.permission.READ_PHONE_STATE"/>
     
     <application
         android:name=".AppContext"
