--- a/Medical/AndroidManifest.xml
+++ b/Medical/AndroidManifest.xml
@@ -41,7 +41,8 @@
         
         <activity
             android:name=".MainActivity"
-        	android:screenOrientation="portrait"/>
+        	android:screenOrientation="portrait"
+        	android:launchMode="singleTask"/>
         
          <activity
             android:name=".personal.LoginActivity"
