--- a/Medical/AndroidManifest.xml
+++ b/Medical/AndroidManifest.xml
@@ -40,7 +40,7 @@
         </activity>
         
         <activity
-            android:name=".MainActivity"
+            android:name=".main.MainActivity"
         	android:screenOrientation="portrait"
         	android:launchMode="singleTask"/>
         
