--- a/Medical/AndroidManifest.xml
+++ b/Medical/AndroidManifest.xml
@@ -32,6 +32,7 @@
         
         <activity
             android:name=".StartActivity"
+        	android:screenOrientation="portrait"
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
