--- a/MM/AndroidManifest.xml
+++ b/MM/AndroidManifest.xml
@@ -106,6 +106,10 @@
         <activity
             android:name=".health.information.HealthInformationDetailActivity"
         	android:screenOrientation="portrait"/>
+        <!-- 健康档案 -->
+        <activity
+            android:name=".health.records.HealthRecordsActivity"
+        	android:screenOrientation="portrait"/>
         
     </application>
 
