--- a/StartLibrary/AndroidManifest.xml
+++ b/StartLibrary/AndroidManifest.xml
@@ -1,11 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="start.core"
-    android:versionCode="1"
-    android:versionName="1.0" >
-
-    <uses-sdk
-        android:minSdkVersion="8"
-        android:targetSdkVersion="19" />
-
+          package="start.core">
+    <uses-sdk android:minSdkVersion="7"/>
+    <application />
 </manifest>
